# fastapi_service_for_spimex

./: Dockerfile  conftest.py  docker-compose.yml  main.py  pyproject.toml
src/api/: endpoints.py  schemas.py  services.py
src/core/: cache.py  database.py  database_for_tests.py  models.py  settings.py  spimex_data.py
tests/: conftest.py  test_api.py
