[tool.poetry]
name = "spimex-microservice"
version = "1.0.0"
description = "Microservice for retrieving SPIMEX trading data via REST API."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
redis = "^4.6.0"
uvicorn = "^0.23.2"
faker = "^13.15.1"
psycopg2-binary = "^2.9.6"
pyyaml = "^6.0"
pydantic-settings = "^2.0.3"
python-dateutil = "^2.8.2"
typer = "^0.7.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E266", "E501", "F403", "F401"]
select = ["B", "C", "E", "F", "I", "Q", "T", "W"]
exclude = ["migrations/*", ".venv/*", "__pycache__/*", "*.dist-info/*"]

[tool.mypy]
strict = true
allow_redefinition = false
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
implicit_optional = false
plugins = []
files = ["src/**/*.py"]

[[tool.coverage.run]]
source = ["src"]
branch = true
parallel = true

[[tool.coverage.report]]
omit = ["src/**/__init__.py"]
precision = 2